# DevilRay

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  conanfile.py  requirements.txt
bbox_viewer/: CMakeLists.txt
bbox_viewer/include/: Application.hpp  Shaders.hpp  benchmark.hpp
bbox_viewer/src/: Application.cpp  BenchmarkGenerator.cpp  Shaders.cpp  UiLayout.cpp  benchmark.cu  main.cpp
benchmark/: CMakeLists.txt
benchmark/include/: benchmark.hpp
benchmark/src/: BenchmarkGenerator.cpp  benchmark.cu  main.cpp
benchmarks/: CMakeLists.txt
benchmarks/src/: bench_tris.cpp  bench_tris.cu
blog/: post1.md  post2.md  post3.md  post4.md
include/: Application.hpp  Buffers.hpp  CameraController.hpp  DebugOptions.hpp  DeviceUtils.hpp  Image.hpp  Renderer.hpp  RunningAverage.hpp  Shaders.hpp  Transform.hpp  Utils.hpp
include/device/: Array.hpp  DevUtils.hpp  DeviceMemory.hpp  Random.hpp  Vector.hpp
include/models/: BBH.hpp  Matrix.hpp  Mesh.hpp
include/tracing/: Benchmark.hpp  Camera.hpp  CameraRay.hpp  DistributionSamplers.hpp  GpuTris.hpp  Intersection.hpp  IntersectionTestsImpl.hpp  LightSampling.hpp  Material.hpp  Medium.hpp  Objects.hpp  OutputOptions.hpp  PathGeneration.hpp  PixelSampling.hpp  SampleScene.hpp  Scene.hpp  TriangleMesh.hpp
models/: cube.blend  cube.mtl  ico.blend  ico.mtl  suzanne.blend  suzanne.mtl
renderer/: CMakeLists.txt
renderer/include/: Application.hpp  Shaders.hpp
renderer/src/: Application.cpp  RenderThread.cpp  SceneSetup.cpp  Shaders.cpp  UiLayout.cpp  main.cpp
src/: Application.cpp  CameraController.cpp  DeviceUtils.cu  DeviceVectorImpl.hpp  DistributionSamplers.cpp  GpuTris.cpp  Image.cpp  Renderer.cpp  RendererImpl.hpp  RunningAverage.cpp  Scene.cpp  Utils.cpp  implementation.cu  main.cpp
src/cuda/: test.cu
src/device/: Array.cpp  Array.cu  DevUtils.cu  DeviceMemory.cu  IntersectionTestsImpl.hpp  RendererImpl.hpp  Vector.cu  implementation.cu
src/models/: BBH.cpp  Mesh.cpp
src/tracing/: TriangleMesh.cpp
test/: CMakeLists.txt
test/src/: TracingTestHelpers.hpp  test_alias.cpp  test_bbh.cpp  test_camera.cpp  test_device.cpp  test_intersection.cpp  test_lighting.cpp  test_math.cpp  test_matrix.cpp  test_mesh.cpp  test_render.cpp  test_running_average.cpp  test_sampling.cpp  test_scene.cpp  test_tracing.cpp  test_transform.cpp
